feat: return teachers and friends on component details