@@ -1,14 +1,33 @@
 package com.borathings.borapagar.component;
 
+import com.borathings.borapagar.classroom.ClassroomEntity;
+import com.borathings.borapagar.classroom.ClassroomHelperService;
+import com.borathings.borapagar.classroom.ClassroomService;
 import com.borathings.borapagar.component.dto.ComponentDTO;
 import com.borathings.borapagar.component.dto.ComponentDetailsDTO;
 import com.borathings.borapagar.component.dto.ComponentResponseDetailsDTO;
 import com.borathings.borapagar.component.mapper.ComponentMapper;
 import com.borathings.borapagar.component.repository.ComponentRepository;
+
+import java.time.LocalDateTime;
+import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 
+import com.borathings.borapagar.core.AbstractModel;
+import com.borathings.borapagar.docent.DocentService;
+import com.borathings.borapagar.docent.dto.DocentEvaluationDTO;
+import com.borathings.borapagar.docent.dto.DocentResponseDTO;
+import com.borathings.borapagar.student.StudentEntity;
+import com.borathings.borapagar.student.StudentRepository;
+import com.borathings.borapagar.student.StudentService;
+import com.borathings.borapagar.student.interest.StudentSubjectInterestEntity;
+import com.borathings.borapagar.student.interest.StudentSubjectInterestHelperService;
+import com.borathings.borapagar.student.interest.StudentSubjectInterestService;
+import com.borathings.borapagar.user.dto.response.UserFriendResponseDto;
+import com.borathings.borapagar.user.dto.response.UserResponseDTO;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.core.ParameterizedTypeReference;
@@ -33,6 +52,16 @@ public class ComponentService {
     @Autowired
     @Qualifier("serviceRestClient")
     RestClient serviceRestClient;
+
+    @Autowired
+    private DocentService docentService;
+    @Autowired
+    private StudentSubjectInterestHelperService studentSubjectInterestService;
+
+    @Autowired
+    private StudentRepository studentRepository;
+    @Autowired
+    private ClassroomHelperService classroomHelperService;
 
 
     public Page<ComponentEntity> getAllComponentsPageable(Pageable pageable) {
@@ -61,8 +90,9 @@ public class ComponentService {
 
 
 
-    @Async
-    public CompletableFuture<ComponentResponseDetailsDTO> findComponentDetails(String code) {
+
+    public ComponentResponseDetailsDTO findComponentDetails(String code,String studentLogin) {
+        StudentEntity student=studentRepository.findByUserLogin(studentLogin).orElseThrow(EntityNotFoundException::new);
         Optional<ComponentEntity> component = componentRepository.findFirstByCode(code);
 
         if (component.isPresent()) {
@@ -74,15 +104,40 @@ public class ComponentService {
                     .retrieve()
                     .body(new ParameterizedTypeReference<List<ComponentDetailsDTO>>() {});
 
-            ComponentDetailsDTO componentDetails = detailsList.isEmpty() ? null : detailsList.get(0);
+            ComponentDetailsDTO componentDetails = detailsList==null || detailsList.isEmpty()  ? null : detailsList.getFirst();
 
-            ComponentResponseDetailsDTO response = componentMapper.toDetailsDTO(componentEntity, componentDetails);
-
-            return CompletableFuture.completedFuture(response);
+            List<DocentResponseDTO> docentes=getTeachersReviews(code);
+            List<UserFriendResponseDto> friendsInterests=studentSubjectInterestService.getFriendsInterestsInComponent(student,code).stream()
+                    .map(item->{
+                        StudentEntity studentFriend=item.getStudent();
+                                System.out.println(student.getStudentName());
+                        return new UserFriendResponseDto(studentFriend.getStudentName(),studentFriend.getCourseName(),studentFriend.getUserPeriod(),studentFriend.getImageUrl());
+                    }
+                    ).toList();
+            return componentMapper.toDetailsDTO(componentEntity, componentDetails,docentes,friendsInterests);
         }
 
-        return CompletableFuture.completedFuture(null);
+        return null;
     }
+
+    private List<DocentResponseDTO> getTeachersReviews(String code) {
+
+        List<ClassroomEntity> classrooms = classroomHelperService.findClassroomsByComponentCode(code);
+        int currentYear = LocalDateTime.now().getYear();
+
+        List<ClassroomEntity> filteredClassrooms = classrooms.stream()
+                .filter(item -> item.getYear() > currentYear - 2)
+                .toList();
+
+        // Passa a lista filtrada para o método do service (ajuste se o método espera outro tipo)
+        List<DocentEvaluationDTO> evaluationDTOS = docentService.findDocentsEvaluation(code, filteredClassrooms);
+
+        return evaluationDTOS.stream()
+                .map(item -> new DocentResponseDTO(item.getTeacherName(), item.getGeneralAverage()))
+                .toList();
+    }
+
+
 
 
 }
